I may need to do some major refactoring. I think what I am trying to do is overly complicated, and it is not working. I'm thinking I may need to resolve my issues by leaning on flexboxes instead of relying too much on loops and trying to create a 2d array.

--- a/etch.css
+++ b/etch.css
@@ -1,13 +1,14 @@
 #container {
     display: flex;
-    flex-wrap: wrap;
+    
     border: 10px solid black;
     width: 500px;
     height: 500px;
+    flex-wrap: wrap;
   }
   /*boxes shouldn't have any borders, margins, or padding.*/
   /*the box height and width needs to change to fit the space of the container. */
   .box {
-    
+    background-color: red;
     flex-grow: 1;
   }
